test/fail/object-creation-stat.app
//ajaxunknownid.app

application test

  entity Usr{}

  function test(){
    Usr{};   
  }